--- a/templates/main.html
+++ b/templates/main.html
@@ -18,7 +18,7 @@
     window.onload = () => {
         time_obj = document.getElementById("timer");
         flag = false;
-        chars = [];
+        chars = ["Rachel", "Joey", "Ross", "Charlie", "Phoebe", "Monica"];
     }
 
     function double_submit_check() {
@@ -145,8 +145,8 @@
                 <!-- Project title -->
                 <h1>GPT-2 Friends</h1><br>
                 <a>Generate Friends script using GPT-2 model.</a><br><br>
-                <a>Git hub repository : </a> <a href="" target="_blank">GPT-2 Friends</a><br>
-                <a>Open API : </a> <a href="" target="_blank">On Ainize</a><br>
+                <a>Git hub repository : </a> <a href="https://github.com/fpem123/GPT2-Friends" target="_blank">GPT-2 Friends</a><br>
+                <a>Open API : </a> <a href="https://ainize.ai/fpem123/GPT2-Friends?branch=master" target="_blank">On Ainize</a><br>
                 <a>Fine tuning data : </a><a href="https://www.kaggle.com/divyansh22/friends-tv-show-script" target="_blank">Kaggle</a><br><br>
             </div>
 
@@ -165,7 +165,7 @@
             <div class="sample">
                 <h3><label>Example</label></h3>
                 <h5><label>Input</label></h5>
-                <label>&nbsp;&nbsp;Character: Philip J. Fry<br>&nbsp;&nbsp;Text: Hello everyone</label><br><br>
+                <label>&nbsp;&nbsp;Character: Rachel Karen Greene<br>&nbsp;&nbsp;Text: Hello everyone</label><br><br>
                 <h5><label>Script</label></h5>
                 <img src="../static/Sample.png" width="100%">
             </div>
@@ -176,7 +176,12 @@
                 <h3>Try it!</h3><br>
                 <label>Character: </label>
                 <select id="name" style="width:180pt">
-                    <option value="Me">Me</option>
+                    <option value="Rachel">Rachel Karen Greene</option>
+                    <option value="Joey">Joseph Francis Tribbiani, Jr.</option>
+                    <option value="Ross">Ross Geller, Ph.D.</option>
+                    <option value="Charlie">Chandler Muriel Bing</option>
+                    <option value="Phoebe">Phoebe Buffay</option>
+                    <option value="Monica">Monica E. Geller</option>
                 </select><br>
                 <label>Text: </label>
                 <input type="text" id="text" style="width:40%">
