--- a/templates/main.html
+++ b/templates/main.html
@@ -18,7 +18,8 @@
     window.onload = () => {
         time_obj = document.getElementById("timer");
         flag = false;
-        chars = ["Rachel", "Joey", "Ross", "Charlie", "Phoebe", "Monica"];
+        //chars = ["Rachel", "Joey", "Ross", "Charlie", "Phoebe", "Monica"];
+        chars = [];
     }
 
     function double_submit_check() {
