--- a/templates/main.html
+++ b/templates/main.html
@@ -18,7 +18,7 @@
     window.onload = () => {
         time_obj = document.getElementById("timer");
         flag = false;
-        chars = ["Rachel", "Joey", "Ross", "Charlie", "Phoebe", "Monica"];
+        chars = ["Rachel", "Joey", "Ross", "Chandler", "Phoebe", "Monica"];
     }
 
     function double_submit_check() {
@@ -179,7 +179,7 @@
                     <option value="Rachel">Rachel Karen Greene</option>
                     <option value="Joey">Joseph Francis Tribbiani, Jr.</option>
                     <option value="Ross">Ross Geller, Ph.D.</option>
-                    <option value="Charlie">Chandler Muriel Bing</option>
+                    <option value="Chandler">Chandler Muriel Bing</option>
                     <option value="Phoebe">Phoebe Buffay</option>
                     <option value="Monica">Monica E. Geller</option>
                 </select><br>
